<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".ui.WelcomeFragment">

    <View
        android:id="@+id/viewOne"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/user_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="@id/viewOne"
        app:layout_constraintTop_toTopOf="@id/viewOne" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/userImage"
        app:layout_constraintEnd_toEndOf="@id/viewOne"
        app:layout_constraintStart_toEndOf="@id/userImage"
        app:layout_constraintTop_toTopOf="@id/userImage" />

    <View
        android:id="@+id/viewTwo"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/quiz"
        app:layout_constraintBottom_toBottomOf="@id/viewTwo"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/viewTwo"
        app:layout_constraintTop_toTopOf="@id/viewTwo"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/message"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/viewTwo"
        app:layout_constraintEnd_toEndOf="@id/viewTwo"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/viewTwo" />

    <TextView
        android:id="@+id/rulesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rules"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:padding="14dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rulesText"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>